syntax = "proto3";

option csharp_namespace = "ProductService";

package product;

service ProductServiceProto {
	rpc GetProduct (GetProductRequest) returns (GetProductResponse) {}
}

message GetProductRequest {
	string id = 1;
}

message GetProductResponse {
	string id = 1;
	string name = 2;
	string image = 3;
	int32 stockQuantity = 4;
	float price = 5;
}